--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ tools/target/
 pom.xml.next
 pom.xml.releaseBackup
 pom.xml.tag
+bin/
+
 release.properties
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
